--- a/package.json
+++ b/package.json
@@ -2,22 +2,61 @@
   "name": "email",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node prisma/seed.ts",
+    "worker": "node src/lib/worker.js"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@prisma/client": "^6.3.1",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@shadcn/ui": "^0.0.4",
+    "bull": "^4.16.5",
+    "chart.js": "^4.4.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "cron": "^3.5.0",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "firebase": "^11.3.1",
+    "firebase-admin": "^13.1.0",
+    "framer-motion": "^12.4.3",
+    "googleapis": "^144.0.0",
+    "handlebars": "^4.7.8",
+    "ioredis": "^5.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.475.0",
+    "mongodb": "^6.13.0",
+    "next": "15.1.7",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-icons": "^5.4.0",
+    "redis": "^4.7.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwind-variants": "^0.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.4.4",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "jest": "^29.7.0",
+    "postcss": "^8",
+    "prisma": "^6.3.1",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2"
   }
 }
